<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="@drawable/layout_background"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp">

    <TextView
        android:id="@+id/customer_info_text"
        style="@style/custom_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number_box"
        style="@style/text_input_layout_customer_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/phone_number_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customer_info_text">

        <com.example.mikailovhotel.shared.core.utils.MaskedEditText
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stars"
            android:inputType="phone"
            android:typeface="monospace"
            app:keep_hint="true"
            android:imeOptions="actionNext"
            mask:allowed_chars="1234567890"
            mask:mask="+7 (###) ###-##-##" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_box"
        style="@style/text_input_layout_customer_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/email"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_box">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:maxLines="1"
            android:imeOptions="actionDone"
            tools:text="examplemail.000@mail.ru" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/pale_plain_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/warning_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/email_box"
        app:layout_constraintStart_toStartOf="@+id/email_box"
        app:layout_constraintTop_toBottomOf="@id/email_box" />
</androidx.constraintlayout.widget.ConstraintLayout>